# dev-env-scripts

./: ReadMe.md
amqbroker/: amq-tools.sh  amqbrokera0.xml  amqbrokera1.xml  amqbrokerb0.xml  amqbrokerb1.xml  broker-back.xml  broker-mirror.xml  broker-template federation.xml  broker-template-jgroups.xml  broker-template-udp.xml  broker-template.xml  broker.xml  jgroups-file-template.xml  jgroups-ping-OCP.xml  jgroups-ping.xml
amqstreams/: Dockerfile  zookeeper-prometheus-config.yaml
artemis/: Dockerfile  broker.xml
centos6/: Dockerfile
demo-apps/qpid-cpp-client/: CMakeLists.txt  Readme.md  main
demo-apps/qpid-cpp-client/src/: Main.cpp
demo-apps/qpid-cpp-client/tls/: certificate.pem  keypairstore.pem  keystore.pem  truststore.back.pem  truststore.pem  truststoreinvert.pem
eap/: Dockerfile  config.properties  mysql.xml  postgresql.xml  resources.cli  standalone.conf
eap6/: .gitignore  Dockerfile  config.properties  start.sh
grafana/: Dockerfile
interconnect/: Dockerfile  qdrouterd-mesh.conf  qdrouterd-to-cloud.conf  qdrouterd.conf
inthematrix/: ReadMe.md  pom.xml
kafka/: Dockerfile  kafka-prometheus-config.yaml
openshift-lab/: ReadMe.md  amq-broker-custom.final.amq-broker.kube.yml  amq-broker-custom.final.amq-messaging-mirror.apps.cluster-968d.968d.example.opentlc.com.kube.yml  amq-broker-custom.final.amq-messaging.apps.cluster-968d.968d.example.opentlc.com.kube.yml  amq-broker-custom.network.amq-broker.0.kube.yml  amq-broker-custom.network.amq-broker.1.kube.yml  (+4 more)
prometheus/: Dockerfile  exampleFuse.txt  exampleKafkaQuery.txt  examplefromOcp  (+2 more)
(+666 files in other folders)
